--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Mian", "Zhong", , "mzhong@ethz.ch", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0009-4546-7214"))
-Description: A set of automation tools to set up an openwashdata data package in 
-a consistent structure. It helps to reduce manual entries on tidy data exporting,
-README writing, pkgdown configuration and content, and etc.
+Description: A set of automation tools to set up an openwashdata data package in a consistent structure. It helps to reduce manual entries on tidy data exporting, README writing, pkgdown configuration and content, and etc.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
