--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: washr
 Title: Tools to make openwashdata data package workflow consistent and efficient
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R: c(
     person("Mian", "Zhong", , "mzhong@ethz.ch", role = c("aut", "cre"),
-           comment = c(ORCID = "0009-0009-4546-7214"))
+           comment = c(ORCID = "0009-0009-4546-7214")),
+    person("Margaux", "Götschmann", , "margauxg@ethz.ch", role = "aut",
+           comment = c(ORCID = "0009-0002-2567-3343"))
+  )
 Description: A set of automation tools to set up an openwashdata data package in a consistent structure. It helps to reduce manual entries on tidy data exporting, README writing, pkgdown configuration and content, and etc.
 License: MIT + file LICENSE
 Encoding: UTF-8
@@ -13,10 +16,11 @@ Imports:
     desc,
     fs (>= 1.6.3),
     rlang (>= 1.1.3),
-    usethis (>= 2.2.3)
+    usethis (>= 2.2.3),
+    withr (>= 3.0.0)
 Language: en-GB
 LazyData: true
 Config/Needs/website: rmarkdown
-Date: 2024-05-03
+Date: 2024-05-06
 URL: https://github.com/openwashdata/washr
 BugReports: https://github.com/openwashdata/washr/issues
