--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,7 @@ Imports:
     desc,
     fs (>= 1.6.3),
     rlang (>= 1.1.3),
-    usethis (>= 2.2.3),
-    withr (>= 3.0.0)
+    usethis (>= 2.2.3)
 Language: en-GB
 LazyData: true
 Config/Needs/website: rmarkdown
@@ -25,4 +24,5 @@ Date: 2024-05-06
 URL: https://github.com/openwashdata/washr
 BugReports: https://github.com/openwashdata/washr/issues
 Suggests: 
-    testthat (>= 3.2.1)
+    testthat (>= 3.2.1),
+    withr (>= 3.0.0)
