--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ RoxygenNote: 7.3.1
 Imports:
     desc,
     fs (>= 1.6.3),
+    readr,
     rlang (>= 1.1.3),
     usethis (>= 2.2.3)
 Language: en-GB
