--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     rlang (>= 1.1.3),
     tibble (>= 3.2.1),
     usethis (>= 2.2.3),
-    utils (>= 4.3.3)
+    utils (>= 4.3.3),
+    gh (>= 1.4.1)
 Language: en-GB
 LazyData: true
 Config/Needs/website: rmarkdown
@@ -31,6 +32,9 @@ Date: 2024-05-06
 URL: https://github.com/openwashdata/washr
 BugReports: https://github.com/openwashdata/washr/issues
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.2.1),
     withr (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
