--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors@R: c(
     person("Mian", "Zhong", , "mzhong@ethz.ch", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0009-4546-7214")),
     person("Margaux", "Götschmann", , "margauxg@ethz.ch", role = "aut",
-           comment = c(ORCID = "0009-0002-2567-3343"))
+           comment = c(ORCID = "0009-0002-2567-3343")),
+    person("Global Health Engineering, ETH Zurich", role = "cph")
   )
 Description: A set of automation tools to set up an openwashdata data package in a consistent structure. It helps to reduce manual entries on tidy data exporting, README writing, pkgdown configuration and content, and etc.
 License: MIT + file LICENSE
