--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: washr
-Title: R Data Package Development Tools For Openwashdata
+Title: R Data Package Development Tools for Openwashdata
 Version: 0.0.0.9000
 Authors@R: c(
     person("Mian", "Zhong", , "mzhong@ethz.ch", role = c("aut", "cre"),
@@ -14,7 +14,7 @@ Description: A set of automation tools to set up an openwashdata data package in
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Imports:
     desc (>= 1.4.3),
     devtools (>= 2.4.5),
