update DESCRIPTION for CRAN submission

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: washr
-Title: Efficient workflow tools for openwashdata package
-Version: 0.0.0.9000
+Title: R Data Package Development Tools for Water Sanitation and Hygiene Data
+Version: 0.0.1
 Authors@R: c(
     person("Mian", "Zhong", , "mzhong@ethz.ch", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0009-4546-7214")),
@@ -9,9 +9,10 @@ Authors@R: c(
     person("Colin", "Walder", , "cwalder@ethz.ch", role = "aut",
            comment = c(ORCID = "0009-0006-0969-1954")),
     person("Lars", "Schöbitz", , "lschoebitz@ethz.ch", role = "aut",
-           comment = c(ORCID = "0000-0003-2196-5015"))
+           comment = c(ORCID = "0000-0003-2196-5015")),
+    person("Global Health Engineering, ETH Zurich", role = "cph")
   )
-Description: A set of automation tools to set up an openwashdata data package in a consistent structure. It helps to reduce manual entries on tidy data exporting, README writing, pkgdown configuration and content, and etc.
+Description: A set of automation tools to set up an openwashdata data package in a consistent structure. It helps to reduce manual entries on tidy data exporting, data dictionary documentation, README and 'pkgdown' website writing, and citation file generation.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -31,9 +32,9 @@ Imports:
 Language: en-GB
 LazyData: true
 Config/Needs/website: rmarkdown
-Date: 2024-06-05
-URL: https://github.com/openwashdata/washr, https://openwashdata-dev.github.io/washr/
-BugReports: https://github.com/openwashdata/washr/issues
+Date: 2024-10-22
+URL: https://github.com/openwashdata-dev/washr
+BugReports: https://github.com/openwashdata-dev/washr/issues
 Suggests: 
     knitr,
     rmarkdown,
