implement different parts of different commits from the cran branch committed between July 4 and July 30
git status

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: washr
-Title: R Data Package Development Tools for Water Sanitation and Hygiene Data
+Title: Data Package Development Tools for Water Sanitation and Hygiene Data
 Version: 0.0.1
 Authors@R: c(
     person("Mian", "Zhong", , "mzhong@ethz.ch", role = c("aut", "cre"),
@@ -12,7 +12,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0003-2196-5015")),
     person("Global Health Engineering, ETH Zurich", role = "cph")
   )
-Description: A set of automation tools to set up an openwashdata data package in a consistent structure. It helps to reduce manual entries on tidy data exporting, data dictionary documentation, README and 'pkgdown' website writing, and citation file generation.
+Description: A set of automation tools to set up an openwashdata R data package in a consistent structure. It helps to reduce manual entries on tidy data exporting, data dictionary documentation, README and 'pkgdown' website writing, and citation file generation.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
